# scatac_fragment_tools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dprint.json  pyproject.toml
.github/workflows/: CI.yml  ci_docs.yml  pages.yml  test.yml
docs/: .gitignore  Gemfile  _config.yml  bigwig.markdown  index.markdown  split.markdown
docs/_posts/: 2024-01-19-welcome-to-jekyll.markdown
rust/: Cargo.toml
rust/src/: aggregate_fragments.rs  custom_errors.rs  lib.rs  pseudobulk.rs  split_fragments.rs
src/scatac_fragment_tools/: __init__.py
src/scatac_fragment_tools/cli/: commands.py  main.py
tests/split/: a.fragments.tsv.gz.tbi  b.fragments.tsv.gz.tbi  cell_type_annotation.tsv  cell_type_annotation_one_bc_multiple_types.tsv  cell_type_annotation_sort_error.tsv  hg38.chrom.sizes  sample_to_fragment.tsv  sample_to_fragment_sort_error.tsv  test_split.py
