[package]
name = "_rust_scatac_fragment_tools"
version = "0.1.3"
authors = ["Seppe De Winter <seppe.dewinter@kuleuven.be>", "Gert Hulselmans <gert.hulselmans@kuleuven.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust_scatac_fragment_tools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
noodles = { version = "0.93.0", features = ["tabix", "bgzf", "csi", "core"] }
