[package]
name = "_rust_scatac_fragment_tools"
version = "0.1.3"
authors = ["Seppe De Winter <seppe.dewinter@kuleuven.be>", "Gert Hulselmans <gert.hulselmans@kuleuven.be>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust_scatac_fragment_tools"
crate-type = ["cdylib"]

[dependencies]
bgzip = { git = "https://github.com/informationsea/bgzip-rs/", rev = "4492b5d6abb3e191c2eb007f148b704b654d528e", default-features = false, features = ["rust_backend", "rayon", "log"] }
itertools = "0.13.0"
pyo3 = { version = "0.22.1", features = ["abi3-py38", "extension-module"] }

[target.'cfg(not(all(target_os = "linux", target_arch = "powerpc64")))'.dependencies]
rust-htslib = { version = "0.48.0", default-features = false, features = ["libdeflate"] }
[target.'cfg(all(target_os = "linux", target_arch = "powerpc64"))'.dependencies]
rust-htslib = { version = "0.48.0", default-features = false }
